--- a/carousel/index.html
+++ b/carousel/index.html
@@ -10,18 +10,26 @@
   
     <div class="carousel-container">
         <div class="carousel-arrow prev">
-            &lt;
+          <div>&lt;</div>  
         </div>
-        <div class="carousel-slides">
+
             <div class="carousel-slide">
-                <img src="gallery-8.jpg" alt="Image 1" width=300px height=300px>
-                <div class="text-box">
-                    <h2>Image 1</h2>
-                    <p>Some text for Image 1</p>
+                <div class="image-box">
+                    <img src="gallery-8.jpg" alt="Image 1" >    
+                </div>
+
+                    <div class="text-box">
+                       <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam omnis itaque laudantium error voluptatum cum distinctio laborum beatae quam amet possimus minus cupiditate nesciunt ipsa voluptate numquam, reiciendis libero soluta.
+                        </p>
+                        <p>
+                       dolorum recusandae. Accusamus quisquam dolor cumque sunt dicta vero neque commodi quod.
+                       </p>
+                 
                 </div>
             </div>
             <!-- Repeat the above structure for each slide -->
-        </div>
+     
         <div class="carousel-navigation">
             <div class="circle active"></div>
             <div class="circle"></div>
