--- a/PortfolioY/portfolio.html
+++ b/PortfolioY/portfolio.html
@@ -10,25 +10,26 @@
 <body>
     <div class="main-container">
     <nav>
-        <div class="track-nav">Web Developer</div>
+        <div class="track-nav">Web Dev
+            eloper</div>
     </nav>
     <div class="secondary-container">
         <div class="about-container">
-            <h1>Achilonu Chinwendu</h1>
-            <p>Frontend Developer</p>
+            <h1>GODSWILL UDEMBA</h1>
+            <p>Web Developer</p>
             <div>
-            <button>About Me</button>
+            <button class="about">About Me</button>
             </div>
         </div>
         <div class="image-container">
-            <img src="./Images/29 Original-min (1).jpg" alt="">
+            <img src="./Images/hannah.jpg" alt="">
             <div class="project-container">
             <button>Project</button>
             </div>
         </div>
         <div class="handles-container">
             <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a]]>
             <a href=""><i class="fa-brands fa-square-github"></i></a>
         </div>
     </div>
