done with netlifx clone with bootstrap

--- a/BuiltWithBootstrap/index.html
+++ b/BuiltWithBootstrap/index.html
@@ -19,12 +19,13 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 ">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         
-        <span class="fs-2 logox  text-danger">Netflix</span>
+        <!-- <span class="fs-2 logox  text-danger">Netflix</span> -->
+        <img src="./images/Vector__3_.svg" alt="" width="100px">
       </a>
 
       <ul class="nav nav-pills px-3" >
         <li class="nav-item">
-          <a class="btn btn btn-danger" href="#">Sign In</a>
+          <a class="btn btn btn-danger" href="./login.html">Sign In</a>
         </li>
       </ul>
     </header> 
