--- a/BuiltWithBootstrap/login.html
+++ b/BuiltWithBootstrap/login.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="Login-top">
-        <img src="Vector__3_.svg" alt="">
+        <img src="./images/Vector__3_.svg" alt="">
     </div>
     <div class="d-flex justify-content-center align-items-center" style="width: 100vw;">
         <section class="Login-box">
@@ -35,12 +35,14 @@
                 </div>
 
                 <div class="mt-3 d-flex">
-                    <img width="20px" height="20px" src="fb.logo.png" alt="">
+                    <img width="20px" height="20px" src="./images/fb.logo.png" alt="">
                     <p class="n-0 text-white small-text">Log In with Facebook</p>
                     
                 </div>
                 <div>
-                    <div class="d-flex text-secondary"><p>New to Netflix? </p><p class="text text-white">Sign Up Now</p></div>
+                    <div class="d-flex text-secondary"><p>New to Netflix? </p>
+                   <a href="./index.html"><p class="text text-white">Sign Up Now</p></a>   
+                    </div>
                      <div class="text1 text-secondary"><p>This page is protected by google reCAPTCHA to</p><p>ensure you're not a bot.</p></div>
                 </div>
               </form>
